<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".reportsFragment">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_marginTop="50dp"
    android:padding="20dp"
    android:layout_marginBottom="90dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:src="@drawable/nutr"
        android:scaleType="fitXY"
        android:id="@+id/img1"
        android:layout_marginTop="20sp"

        android:layout_gravity="center"/>
    <me.biubiubiu.justifytext.library.JustifyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:textSize="26sp"
        android:layout_marginStart="15dp"

        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:id="@+id/tx1"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc1"
        android:layout_marginTop="20sp"
        android:textSize="26sp"

        android:textColor="@color/black"
        android:id="@+id/tx2"
        />
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20sp">
            <ImageView
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:src="@drawable/nutri"
                android:scaleType="fitXY"
                android:id="@+id/img2"
                android:layout_marginStart="20dp"
                android:layout_gravity="center"/>
            <ImageView
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:src="@drawable/nutrition"
            android:scaleType="fitXY"
                android:id="@+id/img3"
            android:layout_marginStart="20dp"
            android:layout_gravity="center"/>

        </LinearLayout>
    </HorizontalScrollView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc2"
        android:textSize="26sp"

        android:textColor="@color/black"
        android:id="@+id/tx8"
        />
    <me.biubiubiu.justifytext.library.JustifyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carbo"
        android:textSize="26sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:id="@+id/tx5"
        />
    <ImageView
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:src="@drawable/carb"
        android:scaleType="fitXY"
        android:id="@+id/img4"
        android:layout_marginTop="20sp"

        android:layout_marginBottom="20sp"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc3"
        android:textSize="26sp"

        android:textColor="@color/black"
        android:id="@+id/tx3"
        />
    <me.biubiubiu.justifytext.library.JustifyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proto"
        android:textSize="26sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:id="@+id/tx9"
        />
    <ImageView
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:src="@drawable/protin"
        android:scaleType="fitXY"
        android:id="@+id/img5"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="20sp"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc4"
        android:textSize="26sp"
        android:textColor="@color/black"

        android:id="@+id/tx4"
        />
    <me.biubiubiu.justifytext.library.JustifyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fato"
        android:textSize="26sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:id="@+id/tx10"
        />
    <ImageView
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:src="@drawable/fats"
        android:scaleType="fitXY"
        android:id="@+id/img6"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="20sp"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc5"
        android:textSize="26sp"

        android:textColor="@color/black"
        android:id="@+id/tx6"
        />
    <me.biubiubiu.justifytext.library.JustifyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vita"
        android:textSize="26sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:id="@+id/tx11"
        />
    <ImageView
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:src="@drawable/vandm"
        android:scaleType="fitXY"
        android:id="@+id/img7"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="20sp"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc6"
        android:textSize="26sp"

        android:textColor="@color/black"
        android:id="@+id/tx7"
        />
    <me.biubiubiu.justifytext.library.JustifyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wat"
        android:textSize="26sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:id="@+id/tx12"
        />
   <com.airbnb.lottie.LottieAnimationView
       android:layout_width="200dp"
       android:layout_height="200dp"
       app:lottie_rawRes="@raw/watter"
       app:lottie_loop="true"
       android:layout_gravity="center"
       app:lottie_autoPlay="true"/>


        </LinearLayout>
        </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>